--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,19 +17,13 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #8b0975;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100%;
 }
 
 h1 {
@@ -49,7 +43,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #2d5d11;
 }
 button:focus,
 button:focus-visible {
@@ -62,9 +56,13 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #2d5d11;
   }
   button {
     background-color: #f9f9f9;
   }
+}
+
+.caption {
+    color: #6B7280
 }
